[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/entity/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entity/dude/state/idle.gd" type="Script" id=2]
[ext_resource path="res://src/entity/dude/dude.png" type="Texture" id=3]
[ext_resource path="res://src/entity/dude/state/air.gd" type="Script" id=4]
[ext_resource path="res://src/entity/dude/state/run.gd" type="Script" id=5]
[ext_resource path="res://src/entity/dude/state/swim_idle.gd" type="Script" id=6]
[ext_resource path="res://src/entity/dude/state/swim_move.gd" type="Script" id=7]
[ext_resource path="res://src/entity/dude/ledge_grab.gd" type="Script" id=8]
[ext_resource path="res://src/entity/dude/state/ledge_up.gd" type="Script" id=9]
[ext_resource path="res://src/entity/dude/swim_dead.gd" type="Script" id=10]
[ext_resource path="res://src/entity/dude/bar.gd" type="Script" id=11]
[ext_resource path="res://src/entity/dude/oxygen.gd" type="Script" id=12]
[ext_resource path="res://assets/texture/oxygen_bar.png" type="Texture" id=13]
[ext_resource path="res://src/HUD/bar/bar.gd" type="Script" id=14]
[ext_resource path="res://assets/texture/oxygen_bar_back.png" type="Texture" id=15]
[ext_resource path="res://src/entity/dude/enter_ship.gd" type="Script" id=16]

[sub_resource type="CapsuleShape2D" id=5]
radius = 2.0
height = 2.0

[sub_resource type="Animation" id=10]
resource_name = "RESET"
length = 0.2

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.6
step = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath("state_machine/ledge_up")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "step"
}, {
"args": [  ],
"method": "step"
}, {
"args": [  ],
"method": "step"
}, {
"args": [  ],
"method": "step"
}, {
"args": [  ],
"method": "step"
}, {
"args": [  ],
"method": "step"
}, {
"args": [  ],
"method": "step"
}, {
"args": [  ],
"method": "step"
}, {
"args": [  ],
"method": "step"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("pivot/Sprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10.0, 11.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5.0, 0.0, 6.0, 0.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8.0, 9.0 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2, 3 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 3, 4 )

[sub_resource type="CircleShape2D" id=11]
radius = 1.41421

[node name="dude" instance=ExtResource( 1 )]
collision_layer = 2
speed = 40.0
jump_speed = 50.0
water_gravity = -20.0
water_damping = 2.0
swim_acceleration = 50.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 5 )

[node name="AnimationPlayer" parent="." index="1"]
anims/RESET = SubResource( 10 )
anims/air = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/ledge_up = SubResource( 9 )
anims/run = SubResource( 4 )
anims/swim_dead = SubResource( 12 )
anims/swim_idle = SubResource( 6 )
anims/swim_move = SubResource( 7 )

[node name="state_machine" parent="." index="2"]
start_state = "idle"

[node name="idle" type="Node" parent="state_machine" index="0"]
script = ExtResource( 2 )
animation = "idle"

[node name="air" type="Node" parent="state_machine" index="1"]
script = ExtResource( 4 )
animation = "air"

[node name="run" type="Node" parent="state_machine" index="2"]
script = ExtResource( 5 )
animation = "run"

[node name="swim_idle" type="Node" parent="state_machine" index="3"]
script = ExtResource( 6 )
animation = "swim_idle"

[node name="swim_dead" type="Node" parent="state_machine" index="4"]
script = ExtResource( 10 )
animation = "swim_dead"

[node name="swim_move" type="Node" parent="state_machine" index="5"]
script = ExtResource( 7 )
animation = "swim_move"

[node name="ledge_up" type="Node" parent="state_machine" index="6"]
script = ExtResource( 9 )
animation = "ledge_up"
on_finish_goto_state = "idle"

[node name="Sprite" type="Sprite" parent="pivot" index="0"]
texture = ExtResource( 3 )
hframes = 4
vframes = 4
__meta__ = {
"_aseprite_wizard_config_": {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "AnimationPlayer",
"source": "res://assets/aseprite/dude.aseprite"
}
}

[node name="ledge_grab" type="Node2D" parent="pivot" index="1"]
unique_name_in_owner = true
script = ExtResource( 8 )

[node name="grab_ray" type="RayCast2D" parent="pivot/ledge_grab" index="0"]
position = Vector2( 3, 0 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="ungrababble" type="Area2D" parent="pivot/ledge_grab" index="1"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/ledge_grab/ungrababble" index="0"]
position = Vector2( 3, -3 )
shape = SubResource( 8 )

[node name="ship_enter" type="Node2D" parent="pivot" index="2"]
unique_name_in_owner = true
script = ExtResource( 16 )

[node name="ship_detect" type="Area2D" parent="pivot/ship_enter" index="0"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/ship_enter/ship_detect" index="0"]
shape = SubResource( 13 )

[node name="oxygen" type="Node" parent="." index="5"]
unique_name_in_owner = true
script = ExtResource( 12 )

[node name="bar" type="Node" parent="oxygen" index="0"]
script = ExtResource( 11 )
value = 10.0
max_value = 10.0

[node name="head" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="head" index="0"]
position = Vector2( 0, -2 )
shape = SubResource( 11 )

[node name="oxygen_bar" type="TextureProgress" parent="." index="7"]
visible = false
margin_left = -8.0
margin_top = -14.0
margin_right = 8.0
margin_bottom = 2.0
step = 0.0
value = 100.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 13 )
script = ExtResource( 14 )

[connection signal="drown" from="oxygen" to="." method="die"]
[connection signal="not_full" from="oxygen" to="oxygen_bar" method="show"]
[connection signal="full" from="oxygen/bar" to="oxygen_bar" method="hide"]
[connection signal="value_changed" from="oxygen/bar" to="oxygen_bar" method="set_values"]
